<resources>
    <string name="app_name">Notas 1.3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Início</string>
    <string name="menu_arquivo">Arquivo</string>
    <string name="menu_lixeira">Lixeira</string>
    <string name="menu_estatisticas">Estatísticas</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_sobre">Sobre</string>

    <!--Activity Nova Nota-->
    <string name="toggle_off"> </string>
    <string name="toggle_on"> </string>

    <!--Activity Filtrar-->
    <string name="topicoOrdenar">Ordenar por:</string>
    <string name="radioMaisRecentes">Mais recentes</string>
    <string name="radioMaisAntigas">Mais antigas</string>
    <string name="topicoPesquisa">Pesquisa:</string>
    <string name="hintPesquisa">Digite uma palavra</string>
    <string name="topicoAplicarFiltrosEm">Aplicar filtros em:</string>
    <string name="checkNotas">Notas</string>
    <string name="checkLembretes">Lembretes</string>
    <string name="buttonAplicarFiltros">Aplicar filtros</string>
    <string name="textResetarFiltros">Resetar</string>

    <!--Fragment Estatísticas-->
    <string name="textStatsTotalNotas">Total de notas:</string>
    <string name="textStatsNotasAtivas">Notas:</string>
    <string name="textStatsLembretes">Lembretes:</string>
    <string name="textStatsArquivadas">Notas arquivadas:</string>
    <string name="textStatsLixeira">Lixeira:</string>
    <string name="textZero">0</string>

    <!--Fragment Configurações-->
    <string name="topicoConfiguracoesNota">CONFIGURAÇÕES DA NOTA</string>
    <string name="topicoTamanhoFonte">Tamanho da fonte</string>
    <string name="tamanhoPequeno">Pequeno</string>
    <string name="tamanhoPadrao">Padrão</string>
    <string name="tamanhoGrande">Grande</string>
    <string name="topicoCorFundo">Cor de fundo</string>
    <string name="corAmarelo">Amarelo</string>
    <string name="corVerde">Verde</string>
    <string name="corCinza">Cinza</string>
    <string name="topicoExportarNotas">EXPORTAR NOTAS</string>
    <string name="buttonExportarNotas">Exportar notas</string>
    <string name="topicoFiltros">FILTROS</string>
    <string name="textConfigResetarFiltros">Resetar filtros</string>
    <string name="topicoDados">DADOS</string>
    <string name="textDeletarDados">Deletar dados</string>
    <string name="topicoConfiguracoes">CONFIGURAÇÕES</string>
    <string name="textRestaurarConfiguracoes">Restaurar configurações</string>
</resources>