<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.appnotas13sql.ui.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_arquivo"
        android:name="com.example.appnotas13sql.ui.ArquivoFragment"
        android:label="@string/menu_arquivo"
        tools:layout="@layout/fragment_arquivo" />

    <fragment
        android:id="@+id/nav_lixeira"
        android:name="com.example.appnotas13sql.ui.LixeiraFragment"
        android:label="@string/menu_lixeira"
        tools:layout="@layout/fragment_lixeira" />

    <fragment
        android:id="@+id/nav_configuracoes"
        android:name="com.example.appnotas13sql.ui.ConfiguracoesFragment"
        android:label="@string/menu_configuracoes"
        tools:layout="@layout/fragment_configuracoes" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.example.appnotas13sql.ui.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />
</navigation>