<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_inicio" />

        <item
            android:id="@+id/nav_arquivo"
            android:icon="@drawable/ic_menu_arquivo"
            android:title="@string/menu_arquivo" />

        <item
            android:id="@+id/nav_configuracoes"
            android:icon="@drawable/ic_menu_configuracoes"
            android:title="@string/menu_configuracoes" />
    </group>

    <item android:title="Informações">
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_sobre"
                android:title="@string/menu_sobre" />
        </menu>
    </item>
</menu>